--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,7 +56,7 @@ jobs:
           colcon-mixin-repository: https://raw.githubusercontent.com/colcon/colcon-mixin-repository/3e627e0fa30db85aea05a50e2c61a9832664d236/index.yaml
           target-ros2-distro: ${{ env.ROS_DISTRO }}
           vcs-repo-file-url: https://raw.githubusercontent.com/${{ github.repository }}/${{ github.sha }}/upstream_dependencies.repos
-
+          package-name: ${{ env.PACAKGES_TO_TEST }}
 
   linux-arm64-build-and-test:
     runs-on: ubuntu-latest
@@ -82,6 +82,7 @@ jobs:
 
       - name: Start ARM64 ROS2 Container
         run: |
+          pwd
           docker run --name arm64-ros --mount type=bind,source=$(pwd),target=/rosws/src/$(basename $(pwd)) --workdir /rosws --detach -i --rm arm64v8/ros:${{ env.ROS_DISTRO }}
 
       - name: Install ROS Source Dependencies
@@ -116,3 +117,4 @@ jobs:
         with:
           target-ros2-distro: ${{ env.ROS_DISTRO }}
           vcs-repo-file-url: https://raw.githubusercontent.com/${{ github.repository }}/${{ github.sha }}/upstream_dependencies.repos
+          package-name: ${{ env.PACAKGES_TO_TEST }}
