--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ on:
 
 env: 
   ROS_DISTRO: foxy
-  PACAKGES_TO_TEST: "uwrt_mars_rover"
+  PACKAGES_TO_TEST: "uwrt_mars_rover"
 
 jobs:
   linters:
@@ -34,7 +34,7 @@ jobs:
         with:
           distribution: rolling
           linter: ${{ matrix.linter }}
-          package-name: ${{ env.PACAKGES_TO_TEST }}
+          package-name: ${{ env.PACKAGES_TO_TEST }}
 
 
   linux-amd64-build-and-test:
@@ -56,7 +56,7 @@ jobs:
           colcon-mixin-repository: https://raw.githubusercontent.com/colcon/colcon-mixin-repository/3e627e0fa30db85aea05a50e2c61a9832664d236/index.yaml
           target-ros2-distro: ${{ env.ROS_DISTRO }}
           vcs-repo-file-url: https://raw.githubusercontent.com/${{ github.repository }}/${{ github.sha }}/commom_upstream_dependencies.repos
-          package-name: ${{ env.PACAKGES_TO_TEST }}
+          package-name: ${{ env.PACKAGES_TO_TEST }}
 
   linux-arm64-build-and-test:
     runs-on: ubuntu-latest
@@ -96,7 +96,7 @@ jobs:
         run: >
           docker exec arm64-ros bash -c "source /opt/ros/${{ env.ROS_DISTRO }}/setup.bash &&
             colcon build --event-handlers console_cohesion+ && 
-            colcon test --packages-select ${{ env.PACAKGES_TO_TEST }} --return-code-on-test-failure --event-handlers console_cohesion+"
+            colcon test --packages-select ${{ env.PACKAGES_TO_TEST }} --return-code-on-test-failure --event-handlers console_cohesion+"
 
   windows-amd64-build-and-test: # No rostooling/setup-ros-docker docker images available for Windows.
     runs-on: windows-latest
@@ -116,4 +116,4 @@ jobs:
           target-ros2-distro: ${{ env.ROS_DISTRO }}
           vcs-repo-file-url: |
             https://raw.githubusercontent.com/${{ github.repository }}/${{ github.sha }}/windows_amd64_upstream_dependencies.repos
-          package-name: ${{ env.PACAKGES_TO_TEST }}
+          package-name: ${{ env.PACKAGES_TO_TEST }}
