improve package list spacing

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,8 @@ on:
 
 env: 
   ROS_DISTRO: foxy
-  PACKAGES_TO_TEST: "uwrt_mars_rover"
+  PACKAGES_TO_TEST: |
+    uwrt_mars_rover
 
 jobs:
   linters:
