--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,8 +11,10 @@ on:
 
 env: 
   ROS_DISTRO: foxy
-  PACKAGES_TO_TEST: |
+  PACKAGES_TO_TEST: >
+    "
     uwrt_mars_rover
+    "
 
 jobs:
   linters:
