--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,9 +12,7 @@ on:
 env: 
   ROS_DISTRO: foxy
   PACKAGES_TO_TEST: |
-    "
-    uwrt_mars_rover
-    "
+    "uwrt_mars_rover"
 
 jobs:
   linters:
