Initial ROS2 drivetrain description (#170)
* ROS2 CI Development Commit
  *clang-tidy
  *xmllint
  *clang-format
  *flake8
  *cppcheck
  *ASan Sanitizer
  *Builds on Ubuntu-20.04
  *Does not support windows - who even uses that
  *All it needs is the ARM64 build
    - Template/rough draft of how the ARM64 CI job
      should look like towards the bottom of the
      .github/ci.yaml
  *ARM64 Build CI Development still in progress
  *FINALLY!!!!!

* ROS2 Drivetrain Description

* Drivetrain Code in Progress

* cleanup .files

* remove uwrt_drivetrain hw

Co-authored-by: niiquaye <omarmon@uwaterloo.ca>

--- a/uwrt_mars_rover/package.xml
+++ b/uwrt_mars_rover/package.xml
@@ -11,6 +11,12 @@
 
   <build_depend>rclcpp</build_depend>
 
+  <build_depend>uwrt_mars_rover_description</build_depend>
+  <build_depend>uwrt_mars_rover_drivetrain</build_depend>
+
+  <exec_depend>uwrt_mars_rover_description</exec_depend>
+  <exec_depend>uwrt_mars_rover_drivetrain</exec_depend>
+
   <test_depend>ament_cmake_cppcheck</test_depend>
   <test_depend>ament_clang_tidy</test_depend>
   <test_depend>ament_cmake_clang_tidy</test_depend>
