--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_description/CMakeLists.txt
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_description/CMakeLists.txt
@@ -5,8 +5,8 @@ find_package(ament_cmake REQUIRED)
 
 install(
     DIRECTORY
+      config
       launch
-      ros2_control
       rviz
       urdf
     DESTINATION
