--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_description/package.xml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_description/package.xml
@@ -3,13 +3,13 @@
 <package format="3">
   <name>uwrt_mars_rover_drivetrain_description</name>
   <version>0.0.0</version>
-  <description>Package with URDF and description files of the UWRT rover's differential drivetrain.</description>
+  <description>Package containing URDF and description files of the UWRT rover's differential drivetrain.</description>
 
   <maintainer email="omarmon@uwaterloo.ca">Orson Marmon</maintainer>
   <author email="omarmon@uwaterloo.ca">Orson Marmon</author>
   <author email="melvin.mc.wang@gmail.com">Melvin Wang</author>
 
-  <license>Apache-2.0</license>
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
