--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/package.xml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/package.xml
@@ -3,9 +3,13 @@
 <package format="3">
   <name>uwrt_mars_rover_drivetrain_hw</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Package containing ros2control interface of the UWRT rover's differential drivetrain.</description>
+
   <maintainer email="omarmon@uwaterloo.ca">niiquaye</maintainer>
-  <license>TODO: License declaration</license>
+  <author email="omarmon@uwaterloo.ca">Orson Marmon</author>
+  <author email="melvin.mc.wang@gmail.com">Melvin Wang</author>
+
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
