--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/CMakeLists.txt
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/CMakeLists.txt
@@ -1,66 +1,71 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.8)
 project(uwrt_mars_rover_drivetrain_hw)
 
-# Default to C99
-if(NOT CMAKE_C_STANDARD)
-  set(CMAKE_C_STANDARD 99)
-endif()
-
-# Default to C++14
-if(NOT CMAKE_CXX_STANDARD)
-  set(CMAKE_CXX_STANDARD 14)
-endif()
-
-if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
-endif()
+endif ()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(hardware_interface REQUIRED)
-find_package(transmission_interface REQUIRED)
 find_package(pluginlib REQUIRED)
 find_package(rclcpp REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclcpp_lifecycle REQUIRED)
+find_package(transmission_interface REQUIRED)
 
 add_library(
-  ${PROJECT_NAME}
-  SHARED
-  src/${PROJECT_NAME}.cpp 
-  src/${PROJECT_NAME}_real.cpp
+    ${PROJECT_NAME}
+    SHARED
+    src/${PROJECT_NAME}_actuator_interface.cpp
 )
-
 target_include_directories(
-  ${PROJECT_NAME}
-  PRIVATE
-  include
+    ${PROJECT_NAME}
+    PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
 )
-
+# Require C99 and C++17
+target_compile_features(
+    ${PROJECT_NAME}
+    PUBLIC
+    c_std_11
+    cxx_std_17
+)
 ament_target_dependencies(
-  ${PROJECT_NAME}
-  hardware_interface
-  transmission_interface
-  pluginlib
-  rclcpp
+    ${PROJECT_NAME}
+    hardware_interface
+    pluginlib
+    rclcpp
+    rclcpp_lifecycle
+    transmission_interface
 )
 
+# Causes the visibility macros to use dllexport rather than dllimport,
+# which is appropriate when building the dll but not consuming it.
+target_compile_definitions(${PROJECT_NAME} PRIVATE "UWRT_MARS_ROVER_DRIVETRAIN_HW_BUILDING_LIBRARY")
 pluginlib_export_plugin_description_file(hardware_interface ${PROJECT_NAME}.xml)
 
 install(
-  TARGETS ${PROJECT_NAME}
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib
-  RUNTIME DESTINATION bin
+    TARGETS ${PROJECT_NAME}
+    DESTINATION lib
 )
 
 install(
-  DIRECTORY config launch
-  DESTINATION share/${PROJECT_NAME}
+    DIRECTORY
+    include
+    DESTINATION
+    include
 )
 
-if(BUILD_TESTING)
+install(
+    DIRECTORY
+    config
+    launch
+    DESTINATION
+    share/${PROJECT_NAME}
+)
+
+if (BUILD_TESTING)
   # generate compile_commands.json for clang-tidy
   set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "") # works
 
@@ -83,6 +88,19 @@ if(BUILD_TESTING)
   # clang-tidy 
   find_package(ament_cmake_clang_tidy REQUIRED)
   ament_clang_tidy(${CMAKE_BINARY_DIR})
-endif()
+endif ()
 
+ament_export_include_directories(
+    include
+)
+ament_export_libraries(
+    ${PROJECT_NAME}
+)
+ament_export_dependencies(
+    hardware_interface
+    pluginlib
+    rclcpp
+    rclcpp_lifecycle
+    transmission_interface
+)
 ament_package()
