--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
     name: ament-${{ matrix.linter }}
     runs-on: ubuntu-latest
     container:
-      image: rostooling/setup-ros-docker:ubuntu-focal-ros-${{ env.ROS_DISTRO }}-desktop-latest
+      image: rostooling/setup-ros-docker:ubuntu-focal-ros-galactic-desktop-latest
       options: -u root
     strategy:
       fail-fast: false # We want all the linters to run even if one fails
@@ -40,7 +40,7 @@ jobs:
   linux-amd64-build-and-test:
     runs-on: ubuntu-latest
     container:
-      image: rostooling/setup-ros-docker:ubuntu-focal-ros-${{ env.ROS_DISTRO }}-desktop-latest
+      image: rostooling/setup-ros-docker:ubuntu-focal-ros-galactic-desktop-latest
       options: -u root
 
     steps:
