--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,9 @@ on:
 
 env:
   ROS_DISTRO: galactic
-  PACKAGES_TO_TEST: "uwrt_mars_rover"
+  PACKAGES_TO_TEST: >
+  "uwrt_mars_rover_drivetrain_description "
+  "uwrt_mars_rover_drivetrain_hw"
 
   IMAGE: "rostooling/setup-ros-docker:ubuntu-focal-ros-galactic-desktop-latest"
 
