--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,7 +37,7 @@ jobs:
     strategy:
       fail-fast: false # We want all the linters to run even if one fails
       matrix:
-        linter: [ cppcheck, clang-format, flake8, xmllint ]
+        linter: [ cppcheck, flake8, xmllint ]
 
     steps:
       - name: Checkout Repository
@@ -50,9 +50,27 @@ jobs:
           linter: ${{ matrix.linter }}
           package-name: ${{ env.PACKAGES_TO_TEST }}
 
+  linters-clang-format:
+    name: ament-clang-format
+    needs: prepare-actions-environment
+    runs-on: ubuntu-latest
+    container:
+      image: ${{ needs.prepare-actions-environment.outputs.image }}
+      options: -u root
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: ROS2 Linter - [ament-clang-format]
+        uses: ros-tooling/action-ros-lint@master
+        with:
+          distribution: ${{ env.ROS_DISTRO }}
+          linter: ament-clang-format
+          arguments: "--clang-format-version 11, --config ${{ env.GITHUB_WORKSPACE }}/.clang-format"
+          package-name: ${{ env.PACKAGES_TO_TEST }}
 
   linux-amd64-build-and-test:
-    needs: prepare-actions-environment
     runs-on: ubuntu-latest
     container:
       image: ${{ needs.prepare-actions-environment.outputs.image }}
@@ -103,7 +121,7 @@ jobs:
       - name: Install ROS Source Dependencies
         run: |
           docker exec --workdir /rosws/src arm64-ros vcs import --input uwrt_mars_rover/common_upstream_dependencies.repos
-      #         # TODO: add linux_arm64_upstream_dependencies.repos
+        # TODO: add linux_arm64_upstream_dependencies.repos
       - name: Install ROS Binary Package Dependencies
         run: |
           docker exec arm64-ros sudo apt update
