--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,7 +35,7 @@ jobs:
         with:
           distribution: rolling
           linter: ${{ matrix.linter }}
-          package-name: uwrt_mars_rover
+          package-name: uwrt_mars_rover_arm_description
 
 
   amd64-build:
@@ -62,8 +62,7 @@ jobs:
             }
           colcon-mixin-repository: https://raw.githubusercontent.com/colcon/colcon-mixin-repository/3e627e0fa30db85aea05a50e2c61a9832664d236/index.yaml
           target-ros2-distro: foxy
-          package-name: uwrt_mars_rover
-
+          package-name: uwrt_mars_rover_arm_description
 
   arm64-build:
     runs-on: ubuntu-latest
