fix yaml list inserting extra newline

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,12 +10,11 @@ on:
     - cron: '0 0 * * *'
 
 env:
-  ROS_DISTRO: galactic
-  IMAGE: "rostooling/setup-ros-docker:ubuntu-focal-ros-galactic-desktop-latest"
-
-  PACKAGES_TO_TEST: > # This limits the packages that are checked in CI. This is to avoid testing upstream packages passed in via .repos files.
+  PACKAGES_TO_TEST: # This limits the packages that are checked in CI. This is to avoid testing upstream packages passed in via .repos files.
     uwrt_mars_rover_drivetrain_description
     uwrt_mars_rover_drivetrain_hw
+  ROS_DISTRO: galactic
+  IMAGE: "rostooling/setup-ros-docker:ubuntu-focal-ros-galactic-desktop-latest"
 
 jobs:
   prepare-actions-environment:
