--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,7 +66,7 @@ jobs:
         with:
           distribution: ${{ env.ROS_DISTRO }}
           linter: clang-format
-          arguments: "--clang-format-version 11, --config ${{ env.GITHUB_WORKSPACE }}/.clang-format"
+          arguments: "--clang-format-version 11, --config ${{ env.GITHUB_WORKSPACE }}/${{ github.event.repository.name }}/.clang-format"
           package-name: ${{ env.PACKAGES_TO_TEST }}
 
   linux-amd64-build-and-test:
